--- a/countdown.html
+++ b/countdown.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h3>broncolor Stelos — Webinar de Lançamento</h3>
+  <h3>BRONCOLOR Stelos 800 L — Webinar de Lançamento</h3>
 
   <div class="timer">
     <div class="box"><span id="d">00</span><small>Dias</small></div>
